# prompt-pad

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.claude/commands/app/: dev.md  install.md  release.md
.github/workflows/: ci.yml  release.yml
docs/: PromptPad-CICD-PRD.md  PromptPad-Implementation-Plan.md  PromptPad-PRD.md  TODO.md  implementation-plan.md  tasks.md  todo.md
scripts/: bump-version.sh  dev.sh  generate-checksums.sh  generate-icons.mjs  install.sh  release.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  focus.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/error/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/storage/: index.rs  mod.rs  prompt_store.rs  settings.rs
src-tauri/windows/fragments/: launch-on-finish.wxs
src/components/: FolderSelect.tsx  ImportExport.tsx  Launcher.tsx  MarkdownEditor.tsx  PromptEditor.tsx  PromptItem.tsx  PromptManager.tsx  ResultsList.tsx  RiderPreview.tsx  SearchInput.tsx  Settings.tsx  TagInput.tsx
src/features/editor/components/: MarkdownEditor.tsx  PromptEditor.tsx  TagInput.tsx  index.ts
src/features/launcher/components/: LauncherWindow.tsx
src/features/settings/components/: SettingsPanel.tsx
src/hooks/: useDebounce.test.ts  useKeyboardNavigation.ts
src/lib/search/: index.ts  useFuzzySearch.ts
src/lib/tauri/: commands.ts  types.ts
src/lib/theme/: ThemeProvider.tsx
src/stores/: appStore.test.ts  appStore.ts  launcherStore.test.ts  launcherStore.ts  promptStore.test.ts  promptStore.ts
src/styles/: index.css
src/test/: setup.ts
src/types/: index.ts
src/utils/: clipboard.ts  frontmatter.test.ts  frontmatter.ts  importExport.ts  initialize.ts  search.test.ts  search.ts  shortcuts.ts  storage.ts
